--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,22 @@
 .App {
+  display: flex;
+   flex-wrap: wrap;
+  /* justify-content: space-between;
+
   text-align: center;
+  align-content: flex-start; */
+}
+.chart {
+  flex: none;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -26,13 +29,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+} */ 
